<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2022-present StellarSand
  ~
  ~  This file is part of IYPS.
  ~
  ~  IYPS is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  IYPS is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with IYPS.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/generatedPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:padding="@dimen/margin_20"
        android:background="@drawable/shape_outline"
        android:backgroundTint="@color/color_surfaceVariant"
        android:gravity="center"
        android:minHeight="50dp"
        android:textColor="@color/color_text_title"
        android:textSize="@dimen/text_20"
        style="@style/MediumBoldText"/>

    <ScrollView
        android:id="@+id/generateScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_12">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_8">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/detailsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="8dp"
                    android:paddingVertical="@dimen/margin_12"
                    android:drawableTop="@drawable/ic_details"
                    android:drawableTint="@color/color_text_title"
                    android:text="@string/details"
                    android:textSize="@dimen/text_15"
                    android:textColor="@color/color_text_title"
                    android:backgroundTint="@color/color_bottom_nav_indicator" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/copyPasswordBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="8dp"
                    android:paddingVertical="@dimen/margin_12"
                    android:drawableTop="@drawable/ic_copy"
                    android:drawableTint="@color/color_text_title"
                    android:text="@string/copy"
                    android:textSize="@dimen/text_15"
                    android:textColor="@color/color_text_title"
                    android:backgroundTint="@color/color_bottom_nav_indicator" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/regenerateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="8dp"
                    android:paddingVertical="@dimen/margin_12"
                    android:drawableTop="@drawable/ic_regenerate"
                    android:drawableTint="@color/color_text_title"
                    android:text="@string/regenerate"
                    android:textSize="@dimen/text_15"
                    android:textColor="@color/color_text_title"
                    android:backgroundTint="@color/color_bottom_nav_indicator" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shareBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="8dp"
                    android:paddingVertical="@dimen/margin_12"
                    android:drawableTop="@drawable/ic_share"
                    android:drawableTint="@color/color_text_title"
                    android:text="@string/share"
                    android:textSize="@dimen/text_15"
                    android:textColor="@color/color_text_title"
                    android:backgroundTint="@color/color_bottom_nav_indicator" />

            </GridLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/customizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_16"
                android:paddingStart="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                android:drawableStart="@drawable/ic_customize"
                android:drawablePadding="@dimen/margin_12"
                android:text="@string/customize"
                android:textColor="@color/color_text_title"
                android:textSize="@dimen/text_20"
                style="@style/MediumBoldText"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lengthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_20"
                android:paddingStart="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                android:text="@string/length"
                android:textColor="@color/color_text_title"
                android:textSize="@dimen/text_16"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/passwordLengthSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginEnd="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_8"
                android:valueFrom="5"
                android:valueTo="128"
                android:stepSize="1"
                app:labelBehavior="gone"
                app:trackHeight="@dimen/margin_32"
                app:thumbElevation="0dp"
                app:thumbRadius="@dimen/margin_12"
                app:thumbColor="@color/color_onPrimary"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/uppercaseSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_12"
                android:checked="true"
                android:text="@string/uppercase"
                android:textSize="@dimen/text_16"
                android:textColor="@color/color_text_title"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/lowercaseSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_8"
                android:checked="true"
                android:text="@string/lowercase"
                android:textSize="@dimen/text_16"
                android:textColor="@color/color_text_title"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/numbersSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_8"
                android:checked="true"
                android:text="@string/numbers"
                android:textSize="@dimen/text_16"
                android:textColor="@color/color_text_title"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/specialCharsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_8"
                android:checked="true"
                android:text="@string/special_char"
                android:textSize="@dimen/text_16"
                android:textColor="@color/color_text_title"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/avoidAmbCharsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_2.5"
                android:checked="true"
                android:text="@string/avoid_amb_chars"
                android:textSize="@dimen/text_16"
                android:textColor="@color/color_text_title"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/includeSpacesSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_2.5"
                android:checked="false"
                android:text="@string/include_spaces"
                android:textSize="@dimen/text_16"
                android:textColor="@color/color_text_title"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>