<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2022-present StellarSand
  ~
  ~  This file is part of IYPS.
  ~
  ~  IYPS is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  IYPS is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with IYPS.  If not, see <https://www.gnu.org/licenses/>.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@drawable/shape_scrollbar_thumb"
    tools:context=".fragments.main.SettingsFragment"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="@dimen/margin_12"
        android:paddingEnd="@dimen/margin_12"
        android:paddingBottom="@dimen/margin_10">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/app_icon_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="@dimen/margin_16"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="center"
            android:background="@color/seed"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6.5"
            android:paddingStart="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_8"
            android:text="@string/app_name"
            android:textColor="@color/color_onSurface"
            android:textSize="@dimen/text_20"
            style="@style/MediumBoldText"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2.5"
            android:paddingStart="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_8"
            android:text="@string/app_version"
            android:textColor="@color/color_control_normal"
            android:textSize="@dimen/text_17"
            style="@style/MediumBoldText"/>

        <include
            layout="@layout/divider_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/margin_16"
            android:text="@string/theme"
            android:textAlignment="viewStart"
            android:textColor="@color/color_onSurface"
            android:textSize="@dimen/text_16"
            android:drawableStart="@drawable/ic_theme"
            android:drawablePadding="@dimen/margin_16" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginStart="@dimen/margin_8"
            android:text="@string/privacy"
            android:layout_gravity="start"
            android:textColor="@color/color_onSurface"
            android:textSize="@dimen/text_17"
            style="@style/MediumBoldText"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/block_screenshots_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2.5"
            android:padding="@dimen/margin_16"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/block_screenshots"
            android:textAlignment="viewStart"
            android:textColor="@color/color_onSurface"
            android:textSize="@dimen/text_16"
            android:drawableStart="@drawable/ic_block_screenshots"
            android:drawablePadding="@dimen/margin_16"
            android:checked="true"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/incognito_keyboard_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:padding="@dimen/margin_16"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/incognito_keyboard"
            android:textAlignment="viewStart"
            android:textColor="@color/color_onSurface"
            android:textSize="@dimen/text_16"
            android:drawableStart="@drawable/ic_incognito_keyboard"
            android:drawablePadding="@dimen/margin_16"
            android:checked="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_8"
            android:text="@string/about"
            android:textColor="@color/color_onSurface"
            android:textSize="@dimen/text_17"
            style="@style/MediumBoldText"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2.5"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/margin_16"
            android:text="@string/privacy_policy"
            android:textAlignment="viewStart"
            android:textColor="@color/color_onSurface"
            android:textSize="@dimen/text_16"
            app:drawableStartCompat="@drawable/ic_privacy_policy"
            android:drawablePadding="@dimen/margin_16"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/margin_16"
            android:text="@string/third_party_licenses"
            android:textAlignment="viewStart"
            android:textColor="@color/color_onSurface"
            android:textSize="@dimen/text_16"
            app:drawableStartCompat="@drawable/ic_licenses"
            android:drawablePadding="@dimen/margin_16" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/report_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/margin_16"
            android:text="@string/report_issue"
            android:textAlignment="viewStart"
            android:textColor="@color/color_onSurface"
            android:textSize="@dimen/text_16"
            app:drawableStartCompat="@drawable/ic_report_issue"
            android:drawablePadding="@dimen/margin_16"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/view_on_git"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginBottom="@dimen/margin_10"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/margin_16"
            android:text="@string/view_on_github"
            android:textAlignment="viewStart"
            android:textColor="@color/color_onSurface"
            android:textSize="@dimen/text_16"
            app:drawableStartCompat="@drawable/ic_view_on_github"
            android:drawablePadding="@dimen/margin_16" />

    </LinearLayout>
</ScrollView>